--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon app.ts",
+    "pretty": "prettier . --write"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -25,6 +26,7 @@
     "@types/node": "^20.11.8",
     "@typescript-eslint/parser": "^6.19.1",
     "nodemon": "^3.0.3",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
