--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
     "mongoose": "^8.1.1",
