--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty": "prettier . --write"
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/luxon": "^3.4.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.8",
