--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "pretty": "prettier . --write"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
@@ -22,6 +24,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
