--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "top-blog-api",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/app.js",
+  "main": "./app.js",
   "scripts": {
-    "build": "npx tsc",
     "start": "node dist/app.js",
     "dev": "nodemon app.ts",
     "pretty": "prettier . --write"
@@ -24,17 +23,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/luxon": "^3.4.2",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.8",
-    "@typescript-eslint/parser": "^6.19.1",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "prettier": "^3.2.4"
   }
 }
